tests/profile/error/camera/gotonode_invalidvalue_negative_height.profile
{
  "version": { "major": 1, "minor": 3 },
  "camera": {
    "type": "goToNode",
    "anchor": "anchor",
    "height": -10.0
  }
}
